# network_automation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example_interface.json  main.py  plan.txt  pyproject.toml  test.py
modules/: generate_all_interface_data.py  get_cisco_native.py  get_data.py  get_network_device_information.py  get_openconfig_interface.py  host.py  interface.py  merge_interface.py  merge_interface_data.py  merge_interface_ethernet.py  merge_interface_subinterface.py  merge_subinterfaces.py  parse_interface_ethernet.py  parse_interface_state.py  parse_interface_subinterface.py  parse_subinterface.py
modules/control/: get_data.py
modules/network_functions/interface/: interface.py  interfaces.py
modules/network_functions/interface/merge/: merge_all_subint.py  merge_ethernet.py  (+3 more)
noa/: __init__.py  main.py
noa/host/: __init__.py  host.py
noa/network_functions/interface/: __init__.py  interface.py  interfaces.py
tests/: conftest.py
tests/genr/: genr_ifs.py
tests/genr/interface/: genr_ifs.py
tests/integration/: test_if.py  test_ifs.py  test_interface.py  test_interfaces.py
tests/integration/interface/: test_if.py  test_ifs.py
tests/mods/interface/: correct_eth_data.py  correct_state_data.py  correct_subint_data.py  generate_test_data_eth.py  generate_test_data_state.py  generate_test_data_subint.py
tests/unit/: conftest.py
tests/unit/test_interface/: test_eth.py  test_extract_ethernet.py  test_extract_state.py  test_extract_subint.py  test_state.py  test_subif.py
tests/unit/test_nw_instance/: test_nw_instance.py
(+25 files in other folders)
